--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
-node_modules
-bower_components
-typings
-platforms
-plugins
-bin
-obj
-libs
-# web storm temp folder
-.idea
-# vs2015 temp folder
-.vs
-artifacts
-*.user
-*.lock.json
-# gulp build folder
-build
-#xamarin studio temp files
-*.userprefs
-#vscode
-.vscode
-upload
-dist
-.sass-cache
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
+
+*~
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+.vscode/
+npm-debug.log*
+
+.idea/
+.sourcemaps/
+.sass-cache/
+.tmp/
+.versions/
+coverage/
+dist/
+node_modules/
+tmp/
+temp/
+hooks/
+platforms/
+plugins/
+plugins/android.json
+plugins/ios.json
+www/
+$RECYCLE.BIN/
+
+.DS_Store
+Thumbs.db
+UserInterfaceState.xcuserstate
