ionic:serve -> start

--- a/3.19/conference/package.json
+++ b/3.19/conference/package.json
@@ -12,7 +12,7 @@
     "clean": "ionic-app-scripts clean",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "npm run build",
-    "ionic:serve": "npm run serve",
+    "start": "npm run serve",
     "ionic:lint": "npm run lint"
   },
   "dependencies": {
